all up and running updated trainee attendance management successfully
